add parking page files
file upload

--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>곧 오픈합니다</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: #111;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Studio plus Marco Coming Soon</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <img src="construction.png" alt="Coming Soon">
+    <div class="container">
+        <img src="construction.png" alt="under construction" class="background-image">
+        <div class="content">
+        </div>
+    </div>
 </body>
 </html>
